# knowledge-kernel

./: .gitignore  LICENSE  OBSERVATION_WINDOW.md  README.md  SKILL.md  pyproject.toml
.hermes/telemetry/grounding/: pilot_summary.json
baselines/: baseline-2026-07-12.json  baseline-2026-07-12.md  gaps-2026-07-12.json
benchmarks/: benchmark_queries.py
cmdb/: __init__.py  assertions.py  engine.py  impact.py  models.py  query.py
cmdb/models/: __init__.py  context.py  entity.py  evidence.py  result.py
cmdb/rules/: relations.py
data/: README.md  network-192-168-1-0.yaml
data/endpoints/: device-1.yaml  device-100.yaml  device-101.yaml  device-103.yaml  device-105.yaml  device-110.yaml  device-112.yaml  device-120.yaml  device-122.yaml  device-128.yaml  device-144.yaml  device-148.yaml  device-2.yaml  device-4.yaml  device-53.yaml  device-54.yaml  device-94.yaml
docs/: README.md  api-python.md  architecture.md  audit-methodology.md  audit-report-example.md  constitution.md  design-principles.md  documentation-methodology.md  domain-model.md  endpoint-identity-vs-observation.md  error-log.md  github-metadata.md  governance.md  greenfield-rebuild.md  migration-v1-to-v2.md  philosophy.md  roadmap-compatibility.md  runtime-discovery.md  schema-v1.md  usage-patterns.md
docs/pitfalls/: asset-duplicates.md  n-plus-one-queries.md
examples/: README.md  agent-example.yaml  endpoint-example.yaml  grounding-telemetry-example.json  software-example.yaml
examples/asset/: app-server-01.yaml  db-server-01.yaml  storage-server-01.yaml
examples/automation/: nightly-backup.yaml
examples/data/: backup-storage.yaml  postgres-db.yaml
examples/entities/: README.md
integrations/: README.md
integrations/hermes/: SKILL.md
integrations/hermes/references/: philosophy.md
integrations/hermes/tests/: __init__.py  test_cmdb_assert.py  test_cmdb_context.py  test_cmdb_exists.py  test_cmdb_get.py  test_cmdb_impact.py
integrations/hermes/tools/: README.md  __init__.py  cmdb_assert.py  cmdb_context.py  cmdb_exists.py  cmdb_get.py  cmdb_impact.py  cmdb_reload.py  grounding_pilot.py  run_pilot.py
integrations/telemetry/: grounding_logger.py
references/: asset-audit-pattern.md  audit-baseline.md  audit-findings-2026-06-12.md  coverage-audit-findings.md  criticality-3d.md  dns-fingerprinting-adguard.md  dns-fingerprinting-patterns.md  endpoints-schema.md  git-remote-strategy.md  github-ssh-vs-api.md  implementation-notes.md  lock-relations-v1.md  minimal-endpoints-design.md  mysql-audit-pattern.md  network-validation-pattern.md  recoverability-classes.md  registry-audit-pattern.md  ssh-access-pattern.md
registry/: __init__.py  indexer.py  query.py
scripts/: cmdb  network_report.py  update-github-meta.py  verify_assets.py  verify_ports.py
tests/: test_acceptance.py  test_registry.py
