[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-kernel"
version = "1.2.0"
description = "Deterministic grounding layer and shared source of truth for AI agents. Store verified facts, evidence, relationships and freshness."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Carlos Cáceres", email = "car.caceresa@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.0",
]

[project.scripts]
cmdb = "scripts.cmdb:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cmdb*"]

[tool.setuptools.package-dir]
"" = "."

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM", "T20"]
ignore = ["E501", "SIM103"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true